<resources>
    <string name="app_name">BeatTrack</string>
    <string name="track_your_heartbeat_embrace_your_rhythm">Track Your Heartbeat, Embrace Your Rhythm</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="join_the_community">Join the community</string>
    <string name="if_you_already_have_an_account">If you already have an account</string>
</resources>